# OpenGLTechniques

./: .gitignore  .gitmodules  CMakeLists.txt  MultiRenders.sln  OpenGLTechniques.sln  README.md
Assets/Models/: Cube.mtl  Fighter.mtl  MyCube.mtl  Sphere.mtl  Teapot.mtl  fnew.mtl
MultiRenders/: Application.cpp  Application.h  Camera.cpp  Diffuse.frag  Diffuse.vert  Font.vert  Fonts.cpp  GameController.cpp  GameController.h  Mesh.cpp  Mesh.h  Mouse.h  MultiRenders.vcxproj  MultiRenders.vcxproj.filters  Resolution.h  Scene.cpp  Scene.h  SceneOne.cpp  SceneOne.h  SceneThree.cpp  SceneThree.h  SceneTwo.cpp  SceneTwo.h  SimpleFragmentShader.frag  Singleton.h  StandardIncludes.h  ToolWindow.h  UnManaged.cpp  Utilities.cpp  Utilities.h  WindowController.cpp  WindowController.h  main.cpp
OpenGL/: Camera.cpp  Camera.h  Color.frag  Font.frag  Fonts.h  GameController.cpp  Mesh.cpp  OpenGL.aps  OpenGL.vcxproj  OpenGL.vcxproj.filters  Shader.cpp  Shader.h  StandardIncludes.h  Texture.h  ToolWindow.h  WindowController.h  main.cpp
OpenGLTechniques/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Diffuse.frag  Diffuse.vert  Fonts.cpp  GameController.cpp  GameController.h  Mesh.cpp  Mesh.h  Mouse.h  MoveLightScene.cpp  MoveLightScene.h  OpenGLTechniques.vcxproj  OpenGLTechniques.vcxproj.filters  OpenGlTechniques.vcxproj  OpenGlTechniques.vcxproj.filters  PostProcessing.frag  PostProcessor.cpp  PostProcessor.h  SceneOne.cpp  SceneThree.cpp  SceneTwo.cpp  Shader.cpp  Shader.h  SimpleVertexShader.vert  Skybox.cpp  Skybox.frag  Skybox.h  SpaceScene.cpp  SpaceScene.h  StandardIncludes.h  Texture.cpp  Texture.h  ToolWindow.cpp  ToolWindow.h  TransformScene.cpp  TransformScene.h  (+6 more)
OpenGLTechniques/shaders/: Color.vert  Diffuse.frag  Diffuse.vert  DiffuseWorld.frag  PostProcessing.vert  Skybox.frag  Skybox.vert
